style: html&header 배경색 디자인

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   padding: 0 2rem;
   align-items: center;
+  background-color: white;
 }
 .navigation ul{
   list-style: none;
