--- a/src/components/UI/modal/Modal.module.css
+++ b/src/components/UI/modal/Modal.module.css
@@ -4,7 +4,7 @@
   height: 100%;
   position: fixed;
 }
-.modal {
+.modalWrapper {
   position: fixed;
   z-index: 10;
   width: 100%;
@@ -12,4 +12,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.modal {
+  animation: slide-down 500ms ease-out forwards;
+}
+
+@keyframes slide-down {
+  from {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
