--- a/src/components/todoList/TodoItem.module.css
+++ b/src/components/todoList/TodoItem.module.css
@@ -1,6 +1,7 @@
 .label {
   display: flex;
   flex-flow: row nowrap;
+  justify-content: space-between;
   align-items: center;
   background-color: orange;
   height: 3rem;
@@ -9,4 +10,9 @@
 .label input {
   width: 1rem;
   height: 1rem;
+  margin: 0.4rem
+}
+.label span {
+  flex-grow: 1;
+
 }
