--- a/src/components/todoList/TodoItem.module.css
+++ b/src/components/todoList/TodoItem.module.css
@@ -1,4 +1,10 @@
+.todoItemWrapper {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
 .label {
+  flex-grow: 1;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
@@ -7,12 +13,15 @@
   height: 3rem;
   font-size: 1.2rem;
 }
-.label input {
+.label .checkboxInput {
   width: 1rem;
   height: 1rem;
   margin: 0.4rem
 }
 .label span {
   flex-grow: 1;
-
+}
+.label .textInput {
+  width: 90%;
+  height: 1.6rem;
 }
